# rajthshttgr-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/rajathshttgr/: __init__.py  core.py
