[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rajathshttgr"
version = "0.0.2"
description = "Placeholder for Rajath Shettigar"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Rajath", email = "rrshttgr@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/rajathshttgr/rajathshttgr-py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]